<resources>
    <string name="app_name">Gamify</string>
    <string name="category">category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="title_activity_play">PlayActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="developer">Developer</string>
    <string name="anju_kumari">Anju Kumari</string>
    <string name="about">About</string>
    <string name="aboutApp">The app provides courses to teach kids. Learning and practice at the same time.</string>
    <string name="application_name">Gamify</string>
    <string name="pic">logo</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="login">login</string>
    <string name="quiz">Quiz</string>
    <string name="share_score">Share Score</string>
    <string name="play_again">Play Again</string>
    <string name="score_00">Score - 00</string>
    <string name="_1_10">1/10</string>
    <string name="score_0">Score: 0</string>
    <string name="wrong_0">Wrong: 0</string>
    <string name="your_quiz_result">Your Quiz Result</string>
    <string name="correct_0">Correct: 0</string>
    <string name="skip_0">Skip: 0</string>
</resources>